--- a/docs/templates/minutes_edit.html
+++ b/docs/templates/minutes_edit.html
@@ -20,7 +20,7 @@
     <ul class="nav nav-sidebar">
       <li><button type="button" class="btn btn-primary ajax-button" id="save_all_button">Save all</button></li>
       <li><button type="button" class="btn btn-primary ajax-button" id="add_item_button">Add item</button></li>
-      <li><button type="button" class="btn btn-primary navigate-button" goto="{% url 'agenda-distribute' meeting_id %}" id="distribute_button">Distribute this agenda</button></li>
+      <li><button type="button" class="btn btn-primary navigate-button" goto="{% url 'minutes-distribute' meeting_id %}" id="distribute_button">Distribute thse minutes</button></li>
       </ul>
   </div><!-- /.col-sm-3 -->
 
