--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -3,6 +3,17 @@
 <form class="savebyjs" action="" method="POST">
   {% csrf_token %}
   
+  
+  <div class="well" id="meeting_details">
+      <h1><small>Meeting details</small></h1>
+      
+        <div class="panel panel-primary">
+	  	  {{ meeting_form}}
+	    </div><!-- ./panel -->
+ 
+      </div><!-- ./well -->
+  
+ 
   {% for item in item_formlist %}
 
     
