Fixed bug which stopped navigation-button buttons from saving current page

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -37,7 +37,7 @@
       <ul class="nav nav-sidebar">
         <li>
           <button type="button" class="btn btn-primary ajax-button" 
-            id="save_button">
+            id="save_agenda">
               Save all
           </button>
         </li>
