Enabled all minutes data to be cleared

--- a/docs/templates/minutes_edit_ajax_items.html
+++ b/docs/templates/minutes_edit_ajax_items.html
@@ -10,6 +10,11 @@
     </div>
     <div class="panel-body">
       {{ meeting_form}}
+      <button type="button" title="Clear minutes" 
+        class="btn btn-default btn-xs ajax-button"
+        id="clear_minutes">
+          <span class="glyphicon glyphicon-remove">Clear these minutes</span>
+      </button>
     </div>
   </div>
    
