Cleaned up accounts templates

--- a/accounts/templates/account_setup.html
+++ b/accounts/templates/account_setup.html
@@ -35,7 +35,9 @@
         {{ group_form.description.errors }}
       </div>
              
-      <button type="submit" class="btn btn-primary btn-block">Start using eConvenor</button>
+      <button type="submit" class="btn btn-primary btn-block">
+        Start using eConvenor
+      </button>
     </form>
   </div>
        
