--- a/accounts/templates/account.html
+++ b/accounts/templates/account.html
@@ -1,28 +1,30 @@
 {% extends "app_base.html" %}
 {% load setclass %}
+{% load staticfiles %}
 
 {% block content %}
 
-
 <div class="page-header">
-	<h1>{{ page_heading }}</h1>
+  <h1>{{ page_heading }}</h1>
 </div>
-
- 
 
 <div class="well">
-	<div class="span6"> 
-		<form action="" method="POST">
-			{% csrf_token %}
-			<p><strong>Group name:</strong></p>
-			<p>{{ account_form.email|setclass:"form-control" }}</p>
-			<p>{{ account_form.username|setclass:"form-control" }}</p>
-			<br>
-			<button type="submit" class="btn btn-primary" data-toggle="button">Save account details</button></a>
-			<a href={% url 'dashboard' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
-		</form>
-	</div>
+  <div class="span6"> 
+    <form action="" method="POST">
+      {% csrf_token %}
+      <p><strong>Group name:</strong></p>
+      <p>{{ account_form.email|setclass:"form-control" }}</p>
+      <p>{{ account_form.username|setclass:"form-control" }}</p>
+      <br>
+      <button type="submit" class="btn btn-primary">
+        Save account details
+      </button>
+      <a href={% url 'dashboard' %}>
+        <button type="button" class="btn btn-default">
+          Cancel
+        </button>
+      </a>
+    </form>
+  </div>
 </div>
-
-
 {% endblock %}
