--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -114,6 +114,7 @@
 		<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
 		<script src="{% static 'js/bootstrap.min.js' %}"></script>
 		<script src="{% static 'js/jquery-ui-1.10.4.custom.min.js' %}"></script>
+		<script src="{% static 'js/jquery.validate-1.11.1.min.js' %}"></script>
 		<script src="{% static 'js/econvenor.js' %}"></script>
 		
 		{% block extrajs %}
