Styled error messages and form field hover colours

--- a/econvenor/commonstatic/css/econvenor.css
+++ b/econvenor/commonstatic/css/econvenor.css
@@ -431,3 +431,26 @@ tbody tr:hover {
 .bottom-spacer {
   height: 500px;
 }
+
+
+/*
+ * Error text
+ */
+
+.error {
+  color: #ff0066;
+  border-color: #ff0066;
+}
+
+
+/*
+ * Forms
+ */
+
+.form-control:focus {
+  border-color: #ff0066;
+  outline: 0;
+  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, , 102, .6);
+          box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgba(255, 0, 102, .6);
+}
+
