--- a/tasks/templates/task_add.html
+++ b/tasks/templates/task_add.html
@@ -1,39 +1,37 @@
 {% extends "app_base.html" %}
 {% load setclass %}
 
+
 {% block content %}
 
-
 <div class="page-header">
-	<h1>{{ page_heading }}</h1>
+  <h1>{{ page_heading }}</h1>
 </div>
 
 <div class="col-lg-6">
-<div class="well"> 
-      
-	<form role="form" id="addtaskform" action="" method="POST">
-        {% csrf_token %}
-    	
-    	{% for field in form %}
-			<div class="form-group">
-      			{{ field.label_tag }}
-      			{% ifequal field.label "Deadline" %}
-      				<br>
-      				{{ field|setclass:"form-control datepicker" }}
-      			{% else %}
-	      			{{ field|setclass:"form-control" }}
-	      	    {{ field.errors }}
-	      		{% endifequal %}
-			</div>
-		{% endfor %}
-
-     	<button type="submit" class="btn btn-primary">Add task</button>
-     	<a href={% url 'task-list' %}><button type="button" class="btn btn-default" data-toggle="button">Cancel</button></a>
-	
-	</form>
-
+  <div class="well"> 
+    <form role="form" id="addtaskform" action="" method="POST">
+    {% csrf_token %}
+      {% for field in form %}
+        <div class="form-group">
+          {{ field.label_tag }}
+          {% ifequal field.label "Deadline" %}
+            <br>
+            {{ field|setclass:"form-control datepicker" }}
+          {% else %}
+            {{ field|setclass:"form-control" }}
+            {{ field.errors }}
+          {% endifequal %}
+        </div>
+      {% endfor %}
+      <button type="submit" class="btn btn-primary">Add task</button>
+      <a href={% url 'task-list' %} type="button" class="btn btn-default" >
+        Cancel
+      </a>
+    </form>
+  </div>
 </div>
-</div>
+
 {% endblock content %}
 
 
