--- a/tasks/templates/task_add.html
+++ b/tasks/templates/task_add.html
@@ -41,7 +41,10 @@
   $(document).ready(function() {
     $("#addtaskform").validate({
       rules: {
-        description: "required",
+        description: {
+          required: true,
+          maxlength: 200,
+        },
         participant: "required",
         deadline: {
           required: true,
@@ -49,7 +52,9 @@
         },
       },
       messages: {
-        description: "Please enter a description of the task",
+        description: {
+          required: "Please enter a description of the task",
+        },
         participant: "Please select the person responsible for the task",
         deadline: {
           required: "Please enter a deadline for the task",
