--- a/participants/templates/participant_add.html
+++ b/participants/templates/participant_add.html
@@ -3,31 +3,76 @@
 
 {% block content %}
 
-
 <div class="page-header">
-	<h1>{{ page_heading }}</h1>
+  <h1>{{ page_heading }}</h1>
 </div>
 
- 
+
 <div class="well"> 
-      
-	<form action="" method="POST">
-	{% csrf_token %}
-    	
-    	{% for field in form %}
-		    <div class="form-group">
-				{{ field.label_tag }} {{ field|setclass:"form-control" }}
-				{{ field.errors }}
-			</div>
-		{% endfor %}
-
-     	 <button type="submit" class="btn btn-primary" data-toggle="button">
-     	     Add participant</button>
-     	 <a href={% url 'participant-list' %}><button type="button" 
-     	     class="btn btn-default" data-toggle="button">Cancel</button></a>
-	
-	</form>
-
+  <form id="addparticipantform" action="" method="POST">
+    {% csrf_token %}
+    {% for field in form %}
+      <div class="form-group">
+        {{ field.label_tag }}
+        {{ field|setclass:"form-control" }}
+        {{ field.errors }}
+      </div>
+    {% endfor %}
+    <button type="submit" class="btn btn-primary" data-toggle="button">
+      Add participant
+    </button>
+    <a href={% url 'participant-list' %} type="button" class="btn btn-default">
+      Cancel
+    </a>
+  </form>
 </div>
 	
-{% endblock %}
+{% endblock content %}
+
+
+{% block extrajs %}
+
+<script>
+  $(document).ready(function() {
+    $("#addparticipantform").validate({
+      rules: {
+        first_name: {
+          required: true,
+          maxlength: 100,
+        },
+        last_name: {
+          maxlength: 100,
+        },
+        email: {
+          email: true,
+        },
+        phone: {
+          maxlength: 20,
+        },
+        notes: {
+          maxlength: 1000,
+        },        
+      },
+      messages: {
+        first_name: {
+          required: "Please enter this participant's first name",
+          maxlength: "The maximum length of this field is 100 characters",
+        },
+        last_name: {
+          maxlength: "The maximum length of this field is 100 characters",
+        },
+        email: {
+          email: "Please enter a valid email address",
+        },
+        phone: {
+          maxlength: "The maximum length of this field is 20 characters",
+        },
+        notes: {
+          maxlength: "The maximum length of this field is 1000 characters",
+        },
+      },
+    });
+  })
+</script>
+
+{% endblock extrajs %}
