--- a/participants/templates/participant_add.html
+++ b/participants/templates/participant_add.html
@@ -18,7 +18,7 @@
         {{ field.errors }}
       </div>
     {% endfor %}
-    <button type="submit" class="btn btn-primary" data-toggle="button">
+    <button type="submit" class="btn btn-primary">
       Add participant
     </button>
     <a href={% url 'participant-list' %} type="button" class="btn btn-default">
