Added a jQuery timepicker

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -140,6 +140,7 @@
 
 {% block extrajs %}
 
+<script src="{% static 'js/jquery.timepicker-1.3.5.min.js' %}"></script>
 <script src="{% static 'js/econvenor-ajax.js' %}"></script>
 
 {% endblock extrajs %}
