--- a/docs/templates/agenda_edit_ajax_items.html
+++ b/docs/templates/agenda_edit_ajax_items.html
@@ -6,6 +6,7 @@
 
 <div class="well" id="meeting_details">
   <h1><small>Meeting details</small></h1>
+  {{ meeting_form.errors }}
   {{ meeting_form.as_p }}
 </div><!-- ./well -->
 
