--- a/econvenor/templates/app_base.html
+++ b/econvenor/templates/app_base.html
@@ -17,6 +17,7 @@
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/jquery-ui-1.10.4.custom.min.css' %}" rel="stylesheet">
+		<link href="{% static 'css/jquery.timepicker-1.3.5.css' %}" rel="stylesheet">
 		<link href="{% static 'css/econvenor.css' %}" rel="stylesheet">
 	</head>
 
