--- a/meetings/templates/meeting_add.html
+++ b/meetings/templates/meeting_add.html
@@ -1,5 +1,6 @@
 {% extends "app_base.html" %}
 {% load setclass %}
+{% load staticfiles %}
 
 {% block content %}
 
@@ -30,9 +31,17 @@
 
 {% block extrajs %}
 
+<script src="{% static 'js/jquery.timepicker-1.3.5.min.js' %}"></script>
+
 <script>
 
   $(function() {
+  
+    jQuery.validator.addMethod("timeCheck", function(value, element) {
+      return this.optional(element) || /^([0-1]?[0-9]|[2][0-3]):([0-5][0-9])$/.test(value);
+    },
+    "Please select a time from the options available");
+
     $("#addmeetingform").validate({
       rules: {
         meeting_no: "required",
@@ -41,7 +50,10 @@
           required: true,
           date: true,
         },
-        start_time_scheduled: "required",
+        start_time_scheduled: {
+          required: true,
+          timeCheck: true,
+        },
         meeting_status: "required",
       },
       messages: {
@@ -51,10 +63,13 @@
           required: "Please select a date for the meeting",
           date: "Please select a valid date from the calendar",
         },
-        start_time_scheduled: "Please select the meeting's start time",
+        start_time_scheduled: {
+          required: "Please select the meeting's start time",        
+        },
         meeting_status: "Please select the current status of the meeting",
       },
     });
+    
   })
 
 </script>
