Got automatic scrolling working again

--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -87,7 +87,7 @@
 			  </tr>
 		    </thead>
 		    <tbody> 
-			  {% for task in incomplete_task_list %}
+			  {% for task in incomplete_tasks_list %}
 			    <tr>
 				  <td>{{ task.description }}</td>
                   <td>{{ task.participant }}</td>
@@ -113,7 +113,7 @@
 			  </tr>
 			</thead>
 			<tbody> 
-			  {% for task in completed_task_list %}
+			  {% for task in completed_tasks_list %}
 				<tr>
 				  <td>{{ task.description }}</td>
 				  <td>{{ task.participant }}</td>
