--- a/docs/templates/agenda_edit_ajax_sidebar.html
+++ b/docs/templates/agenda_edit_ajax_sidebar.html
@@ -6,9 +6,10 @@
       <a href="#id_i{{ item.item_no}}-title" class="sidebar-heading tltip"
          data-toggle="tooltip" title="Scroll to this item">
         <div>
-          <span id="sidebar_heading_{{ item.item_no}}">
-            Item&nbsp;{{ item.item_no}}.&nbsp;&nbsp;{{ item.title }}
-          </span>
+          Item&nbsp;{{ item.item_no}}.&nbsp;&nbsp;
+            <span id="sidebar_heading_{{ item.item_no}}">
+              {{ item.title }}
+            </span>
         </div>
       </a>
     </li>
