--- a/docs/templates/agenda_edit.html
+++ b/docs/templates/agenda_edit.html
@@ -73,8 +73,11 @@
     <!-- TASKS TABLE
     ================================================== -->
 
-      <div class="well" id="tasks">
-        <h1><small>Appendix 1 - Tasks</small></h1>
+      <div class="panel panel-primary" id="tasks">
+      <div class="panel-heading">
+        Attachment 1.  Tasks
+      </div>
+      <div class="panel-body">  
         <h2><small>Tasks outstanding</small></h2>
 	    
 	    <div class="panel panel-primary">
@@ -127,7 +130,8 @@
 			</tbody>
 		  </table>
   	    </div><!-- /.panel -->
-	  </div><!-- /.well -->
+	  </div><!-- /.outer panel body -->
+	  </div><!-- /.outer panel -->
       
       <div class="bottom-spacer">
       </div>
@@ -140,7 +144,6 @@
 
 {% block extrajs %}
 
-<script src="{% static 'js/jquery.timepicker-1.3.5.min.js' %}"></script>
 <script src="{% static 'js/econvenor-ajax.js' %}"></script>
 
 {% endblock extrajs %}
